<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_network">
        <EditTextPreference
            android:key="clientId"
            android:title="@string/pref_client_id_title"
            android:dialogTitle="@string/pref_client_id_dialog"
            android:defaultValue="8001"
            android:summary="@string/pref_client_id_summary"/>

        <EditTextPreference
            android:key="serverIp"
            android:title="@string/pref_server_ip_title"
            android:dialogTitle="@string/pref_server_ip_dialog"
            android:defaultValue="192.168.10.1"
            android:summary="@string/pref_server_ip_summary"/>

        <EditTextPreference
            android:key="serverPort"
            android:title="@string/pref_server_port_title"
            android:inputType="number"
            android:dialogTitle="@string/pref_server_port_dialog"
            android:defaultValue="28000"
            android:summary="@string/pref_server_port_summary"/>

        <ListPreference android:entries="@array/networkType_array"
            android:title="@string/pref_network_type_title"
            android:key="networkType"
            android:summary="@string/pref_network_type_summary"
            android:defaultValue="local"
            android:dialogTitle="@string/pref_network_type_dialog"
            android:entryValues="@array/networkType_values_array"/>

        <ListPreference android:entries="@array/nettype_array"
            android:title="@string/pref_net_type_title"
            android:key="netType"
            android:summary="@string/pref_net_type_summary"
            android:defaultValue="TCP"
            android:dialogTitle="@string/pref_net_type_dialog"
            android:entryValues="@array/nettype_array"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_connection">

        <ListPreference android:entries="@array/mediaType_array"
            android:title="@string/pref_media_type_title"
            android:key="mediaType"
            android:summary="@string/pref_media_type_summary"
            android:defaultValue="h264"
            android:dialogTitle="@string/pref_media_type_dialog"
            android:entryValues="@array/mediaType_values_array"/>

        <ListPreference android:entries="@array/controlType_array"
            android:title="@string/pref_control_type_title"
            android:key="controlType"
            android:summary="@string/pref_control_type_summary"
            android:defaultValue="3"
            android:dialogTitle="@string/pref_control_type_dialog"
            android:entryValues="@array/controlType_vals_array"/>
    </PreferenceCategory>
</PreferenceScreen>
